Undo a break; re-re-fix spacing.

--- a/src/components/color-blocks.module.css
+++ b/src/components/color-blocks.module.css
@@ -35,7 +35,6 @@
 }
 
 .color-title {
-  margin-top: 1rem;
   flex: 1;
 }
 
