--- a/src/components/paint-blocks.module.css
+++ b/src/components/paint-blocks.module.css
@@ -27,7 +27,6 @@
 }
 
 .paint-title {
-  margin-top: 1rem;
   margin-bottom: 0;
   flex: 1;
 }
